# satori-kawpowminer

./: CMakeLists.txt  CODEOWNERS  README.md  appveyor.yml  circle.yml
cmake/: EthCompilerSettings.cmake
cmake/Hunter/: config.cmake
docs/: API_DOCUMENTATION.md  BUILD.md  POOL_EXAMPLES_ETH.md
libapicore/: ApiServer.cpp  CMakeLists.txt
libcrypto/: ethash.cpp  ethash.hpp  keccak.cpp  optional_compat.hpp  progpow.cpp
libethash-cl/: CLMiner.cpp  CLMiner.h  CLMiner_kernel.cl
libethash-cpu/: CPUMiner.cpp
libethash-cuda/: CMakeLists.txt  CUDAMiner.cpp  CUDAMiner_kernel.cu
libethcore/: Farm.h  Miner.cpp  Miner.h
libpoolprotocols/: CMakeLists.txt  PoolURI.cpp
libpoolprotocols/getwork/: EthGetworkClient.cpp  EthGetworkClient.h
libpoolprotocols/stratum/: EthStratumClient.cpp  EthStratumClient.h
satori-kawpowminer/: CMakeLists.txt  main.cpp  satori-kawpowminer.rc
scripts/: testpools.bash
